# letter_trie_1

./: .gitignore  Cargo.toml  LICENSE  README.md  english_words_10_sorted.txt  english_words_10_unsorted.txt  fake_words_20_000_sorted.txt  fake_words_20_000_unsorted.txt  test_good_words.txt  test_non_words.txt  words_9_sorted.txt  words_9_unsorted.txt
src/: base_letter_trie.rs  lib.rs  main.rs  min_struct_letter_trie.rs  no_parent_letter_trie.rs  text_util.rs  util.rs
