[package]
name = "letter_trie"
version = "0.1.0"
authors = ["David Thureson"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typename = "0.1.1"
rand = "0.7"
lazy_static = "1.2.0"
num-format = "0.4.0"
util = { path = "../util" }
